--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
 		"@google-cloud/storage": "^7.11.1",
 		"@lemonsqueezy/lemonsqueezy.js": "^3.0.0",
 		"@sveltejs/adapter-vercel": "^5.3.1",
+		"@vercel/blob": "^0.23.3",
 		"add": "^2.0.6",
 		"autoprefixer": "^10.4.19",
 		"bits-ui": "^0.21.9",
 		"clsx": "^2.1.1",
-		"file-type": "^19.0.0",
+		"dotenv": "^16.4.5",
+		"dotenv-expand": "^11.0.6",
 		"lucide-svelte": "^0.379.0",
-		"node-cron": "^3.0.3",
+		"openai": "^4.47.3",
 		"postcss": "^8.4.38",
 		"resend": "^3.2.0",
 		"svelte-file-dropzone": "^2.0.7",
@@ -45,8 +47,6 @@
 		"@types/node-cron": "^3.0.11",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
 		"@typescript-eslint/parser": "^7.0.0",
-		"dotenv": "^16.4.5",
-		"dotenv-expand": "^11.0.6",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.3",
