--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	"dependencies": {
 		"@google-cloud/storage": "^7.11.1",
 		"@lemonsqueezy/lemonsqueezy.js": "^3.0.0",
+		"@sveltejs/adapter-static": "^3.0.1",
 		"@sveltejs/adapter-vercel": "^5.3.1",
 		"@vercel/blob": "^0.23.3",
 		"add": "^2.0.6",
