--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"moduleResolution": "bundler"
+		"moduleResolution": "bundler",
+		"paths": {
+			"core/*": ["../../packages/core/*"]
+		}
 	}
 }
