--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
 		"@lemonsqueezy/lemonsqueezy.js": "^3.0.0",
 		"@sveltejs/adapter-node": "^5.0.1",
 		"@vercel/blob": "^0.23.3",
-		"@vercel/postgres-kysely": "^0.8.0",
 		"add": "^2.0.6",
 		"autoprefixer": "^10.4.19",
 		"bits-ui": "^0.21.9",
@@ -29,6 +28,7 @@
 		"kysely": "^0.27.3",
 		"lucide-svelte": "^0.379.0",
 		"openai": "^4.47.3",
+		"pg": "^8.12.0",
 		"postcss": "^8.4.38",
 		"resend": "^3.2.0",
 		"svelte-file-dropzone": "^2.0.7",
@@ -47,6 +47,7 @@
 		"@types/ffprobe-static": "^2.0.3",
 		"@types/node": "^20.14.2",
 		"@types/node-cron": "^3.0.11",
+		"@types/pg": "^8.11.6",
 		"@types/uuid": "^9.0.8",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
 		"@typescript-eslint/parser": "^7.0.0",
