--- a/package.json
+++ b/package.json
@@ -14,23 +14,26 @@
 	},
 	"dependencies": {
 		"@google-cloud/storage": "^7.11.1",
-		"@lemonsqueezy/lemonsqueezy.js": "^3.0.0",
+		"@stripe/stripe-js": "^3.5.0",
 		"@sveltejs/adapter-node": "^5.0.1",
 		"@vercel/blob": "^0.23.3",
 		"add": "^2.0.6",
 		"autoprefixer": "^10.4.19",
-		"bits-ui": "^0.21.9",
+		"bits-ui": "^0.21.10",
 		"clsx": "^2.1.1",
 		"dotenv": "^16.4.5",
 		"dotenv-expand": "^11.0.6",
 		"ffprobe": "^1.1.2",
 		"ffprobe-static": "^3.1.0",
+		"file-type": "^19.0.0",
+		"fluent-ffmpeg": "^2.1.3",
 		"kysely": "^0.27.3",
-		"lucide-svelte": "^0.379.0",
+		"lucide-svelte": "^0.395.0",
 		"openai": "^4.47.3",
 		"pg": "^8.12.0",
 		"postcss": "^8.4.38",
 		"resend": "^3.2.0",
+		"stripe": "^15.10.0",
 		"svelte-file-dropzone": "^2.0.7",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
@@ -45,6 +48,7 @@
 		"@types/eslint": "^8.56.0",
 		"@types/ffprobe": "^1.1.8",
 		"@types/ffprobe-static": "^2.0.3",
+		"@types/fluent-ffmpeg": "^2.1.24",
 		"@types/node": "^20.14.2",
 		"@types/node-cron": "^3.0.11",
 		"@types/pg": "^8.11.6",
