--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"jszip": "^3.10.1",
 		"kysely": "^0.27.3",
 		"lucide-svelte": "^0.395.0",
+		"mode-watcher": "^0.3.1",
 		"openai": "^4.47.3",
 		"pg": "^8.12.0",
 		"postcss": "^8.4.38",
